fixed but issues on my end testing